<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NPK Calc</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings1">Email</string>
    <string name="action_settings2">Info</string>


    <string name="output_header">Legume Credit(lb N/acre)</string>


    <string name="result_default">000</string>
    <string name="range_default"> </string>

    <string name="forage_species1">Alfalfa</string>
    <string name="forage_species2">Other</string>
    <string name="forage_species_header">Forage Species</string>

    <string name="soil_type1">Medium/Fine</string>
    <string name="soil_type2">Sand</string>
    <string name="soil_type_header">Soil Type</string>


    <string name="regrowth_type_header">Amount of Regrowth</string>
    <string name="regrowth1">\u003C 8</string>
    <string name="regrowth2">\u003E 8</string>

    <string name="stand_density_header">Stand Density</string>
    <string name="stand_density1">Good</string>
    <string name="stand_density2">Fair</string>
    <string name="stand_density3">Poor</string>
    <string name="density_info">  </string>


    <string name="manure_type">Manure Type</string>
    <string name="manure_type1">Solid Manure</string>
    <string name="manure_type2">Liquid Manure</string>

    <string name="incorp_time_header">Time to Incorporation</string>
    <string name="incorp_time1"><![CDATA[<1 hour]]></string>
    <string name="incorp_time2">1h - 3d</string>
    <string name="incorp_time3"><![CDATA[>3 days]]></string>
    <string name="manure_output_header">Manure Credits (lb N/acre)</string>
    <string name="manure_output">000</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="manure_input">1 ton/acre</string>

    <string name="manure_item_header">Manure Source</string>
    <string-array name="solid_manure">
        <item>Beef</item>
        <item>Dairy: semi-solid (11.1-20.0% DM)</item>
        <item>Dairy: solid (> 20.0% DM)</item>
        <item>Goat</item>
        <item>Horse</item>
        <item>Poultry: chicken</item>
        <item>Poultry: duck</item>
        <item>Poultry: turkey</item>
        <item>Sheep</item>
        <item>Swine</item>
    </string-array>

    <string-array name="liquid_manure">
        <item>Beef</item>
        <item><![CDATA[Dairy: liquid (< 4.0% DM)]]></item>
        <item>Dairy: slurry (4.1-11.0% DM)</item>
        <item>Goat</item>
        <item>Poultry</item>
        <item>Swine: finish (indoor pit)</item>
        <item>Swine: finish (outdoor pit)</item>
        <item>Swine: (farrow-nursery, indoor pit)</item>
        <item>Veal calf</item>
    </string-array>

    <string name="subject_header">header</string>
    <string name="subject">subject</string>
    <string name="text_header">text_header</string>
    <string name="body_text">body_text</string>
    <string name="result_default1">000</string>
    <string name="result_default2">000</string>
    <string name="result_default3">000</string>

    <string name="manure_result_default">00</string>
    <string name="manure_result_default1">00</string>
    <string name="manure_result_default2">00</string>
    <string name="manure_result_default3">00</string>

    <string name="manure_result_header0">N</string>
    <string name="manure_result_header1">P<sub>2</sub>O<sub>5</sub></string>
    <string name="manure_result_header2">K<sub>2</sub>O</string>
    <string name="manure_result_header3">S</string>
    <string name="manure_rate_header">Application Rate</string>

    <string name="analysis1">Yes</string>
    <string name="analysis2">No</string>
    <string name="analysis_title">Has the manure been analyzed?</string>

    <string name="input_hint">lb/ton</string>
    <string name="N_input_title">Available N</string>
    <string name="P_input_title">Available P<sub>2</sub>O<sub>5</sub></string>
    <string name="K_input_title">Available K<sub>2</sub>O</string>
    <string name="S_input_title">Available S</string>


</resources>
